# humanes

./: .pre-commit-config.yaml  pyproject.toml
humanes_api/: humanes_socies.db  populate_database.py  run.py
humanes_api/docker/: Dockerfile  docker-compose.yml
humanes_api/humanes/: app.py  humanes_socies.db
humanes_api/humanes/domain/: cash_register.py  socies.py
humanes_api/humanes/infraestructure/: database.py  entity_mapping.py  repository.py  socies.py
humanes_api/requirements/: requirements.txt
humanes_api/tests/: conftest.py  humanes_socies.db  test_api.py
humanes_api/tests/domain/: test_socie.py
humanes_api/tests/infraestructure/: test_entity_mapping.py  test_repo.py
