[project]
name = "humanes_app"
version = "0.1"

# pytest
[tool.pytest.ini_options]
filterwarnings = [
    "ignore::SyntaxWarning",
    "ignore::DeprecationWarning",
    "ignore::Warning",
    # TODO: MySQL/SQLAlchemy raise this generic warning but it's better to avoid
    "ignore::Warning",
]
addopts = "-s -vv --color=no --durations=20"

[tool.black]
line-length = 120
color = true

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

#
## pytest
#[tool.pytest.ini_options]
#filterwarnings = [
#    "ignore::SyntaxWarning",
#    "ignore::DeprecationWarning",
#    "ignore::Warning",
#    # TODO: MySQL/SQLAlchemy raise this generic warning but it's better to avoid
#    "ignore::Warning",
#]
#addopts = "-s -vv --color=no --durations=20"
#
#[tool.black]
#target-version = ["py38"]
#line-length = 120
#color = true
#
#[tool.darker]
## :PRE-COMMIT: is a magical revision identifier that allows darker to compare the right revisions
## when running under pre-commit.
##
## See: https://github.com/akaihola/darker
#revision = ":PRE-COMMIT:"
#lint = [
#    "ruff --config pyproject.toml --fixable I001 --fix",
#]
##
##[tool.ruff]
##target-version = "py38"
##line-length = 120
##
##select = ["E", "F", "W", "I", "C", "UP", "RUF"]
##
##ignore = [
##    "E501",  # covered by black
##    ]
##unfixable = ["F401"]  # autofixing unused imports is dangerous
##extend-select = ["RUF100"]  # warn about `# noqa` comments that are no longer needed
##ignore-init-module-imports = true
##
##[tool.ruff.mccabe]
##max-complexity = 12
##
##[tool.ruff.isort]
##extra-standard-library = ["typing_extensions"]
