[project]
name = "humanes_app"
version = "0.1"

# pytest
[tool.pytest.ini_options]
filterwarnings = [
    "ignore::SyntaxWarning",
    "ignore::DeprecationWarning",
    "ignore::Warning",
    # TODO: MySQL/SQLAlchemy raise this generic warning but it's better to avoid
    "ignore::Warning",
]
addopts = "-s -vv --color=no --durations=20"

[tool.black]
line-length = 120
color = true

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
